--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -3,18 +3,16 @@
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2014.
 #
-#, fuzzy
-msgid ""
-msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
-"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2014-01-12 16:41+0100\n"
-"PO-Revision-Date: 2014-01-12 16:49+0100\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: fr_FR <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 0.9.6\n"
-
+# fuzzy
+msgid "Account"
+msgstr "Compte"
+msgid "Accounts"
+msgstr "Comptes"
+msgid "New Account"
+msgstr "Nouveau Compte"
+msgid "Filter by"
+msgstr "Filtrer par"
+msgid "Sort by"
+msgstr "Tri par "
+msgid "Quick Filtering"
+msgstr "Filtrage Rapide"
