Display Event, task forms on opportunity_show.html
Former-commit-id: 1899bbab1c24a3353671c8ad792af9fa7c7b45d6 [formerly 529bb2b78206a236139b3180886f6b3371c7a91c] [formerly 411f9f606ca2ecfa9ae3a25f6a14f58ac3dbe87f [formerly 593e2f9a5b0abaa6778f2b1afb851c1c1ce5ebe4]]
Former-commit-id: d115abfdb049b374e34b8adca280eda577f37b50 [formerly fdb4b3cfee612588edd5c982a76e75c4c4edb4a0]
Former-commit-id: 5518130901a617792b596f939507facd2abd866a

--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -1385,7 +1385,7 @@ msgstr "Tout"
 #: templates/cases/case_list.html:22 templates/cases/case_list.html:23
 #: templates/cases/case_list.html:81 templates/cases/case_new.html:14
 msgid "Cases"
-msgstr "Réclamation"
+msgstr "Réclamations"
 
 #: templates/cases/case_list.html:23 templates/leads/lead_list.html:25
 msgid "My"
