Synchronize task with google calendar (delete, patch, insert), # 868
Former-commit-id: b3c5b5ccd09a2553766e662752f4650077637ff0 [formerly 702db44ec356483e2e65fbe549746406744e7c73] [formerly c3735ca3efe882216f79babee8b3fb4f17b64d5c [formerly 4739ba94ae2e437d090e10e20afad74e39b8c12c]]
Former-commit-id: 7985839ed2acae6ec9bb326b8cd115eb6145e608 [formerly 854c3150127298f09735e77aab61c054714ff00d]
Former-commit-id: aad7637c339c8e19f98f2b24bbad38444da07f2a

--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -2579,7 +2579,7 @@ msgstr "Ou?"
 #: templates/leads/lead_show.html:1740
 #: templates/opportunities/opportunity_show.html:1300
 msgid "Add this event"
-msgstr "Ajouter ce rendez-vous"
+msgstr "Ajouter ce événement"
 
 #: templates/accounts/note_show.html:60 templates/articles/article_show.html:58
 msgid "Posted by"
