Work on french translate
Former-commit-id: 9a2ead8923a5541fcad98a85758f62416305b7ac [formerly 1048ceaa046a3c1048cc086f790c1ee270eb9082] [formerly 92a2561666df0b16cdad23213a57d48a46ddad22 [formerly 356ef61df25978eca151433e07e1a08d8cb83235]]
Former-commit-id: ef1f533b5d32a1be3631ec29983be5d9d94e92a3 [formerly 1d9184e1d369bb7e42ec07973b7288afd3762473]
Former-commit-id: 5f1df99e440cae272b429333196900501f23b962

--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -1676,7 +1676,7 @@ msgstr "Ajouter un champ personalisé"
 #: templates/accounts/account_new.html:324
 #, fuzzy
 msgid "Related Contacts"
-msgstr "Supprimer le contact"
+msgstr "Contacts reliés"
 
 #: templates/accounts/account_new.html:332
 #: templates/accounts/account_show.html:1505
