The language :"change actif app language"
Former-commit-id: 3b3d127acaf5e589cc9717a6d7aa3e0db028f3c2 [formerly 218132f4a89396167d7e187ee8a6e60b7aff739e] [formerly f551ca3be4c2be594f90e2c4af6480d38514ef4e [formerly 2b16ba160c1d057b4d8e573a082b47abff594006]]
Former-commit-id: db6439dda66c11e22c7f164b3bf5febf6bcfeff1 [formerly 80117de4b8d092b3946e6f20008e14cf7e449a97]
Former-commit-id: e8f4dfe03919b8c46c3ce5a52a4e584b9a000772

--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -3912,3 +3912,19 @@ msgstr ""
 msgid "No results found, try with another term"
 msgstr ""
 
+# Facturation
+msgid "Billing"
+msgstr "Facturation"
+
+# Discovery
+msgid "Discovery"
+msgstr "Découverte"
+
+# Relationships
+msgid "Relationships"
+msgstr "Relations"
+
+
+# Admin Console 
+msgid "Admin Console"
+msgstr "Console Administration"
