--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -3911,4 +3911,20 @@ msgstr ""
 #: templates/search/list.html:137
 msgid "No results found, try with another term"
 msgstr ""
+# Facturation
+msgid "Billing"
+msgstr "Facturation"
+
+# Discovery
+msgid "Discovery"
+msgstr "Découverte"
+
+# Relationships
+msgid "Relationships"
+msgstr "Relations"
+
+
+# Admin Console 
+msgid "Admin Console"
+msgstr "Console Administration"
 
