--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -3944,3 +3944,6 @@ msgstr "Relations"
 # Admin Console 
 msgid "Admin Console"
 msgstr "Console Administration"
+
+msgid "Details of Lead"
+msgstr "Détails de la piste"
