The title of the task must be required ! ,fix #1187
Former-commit-id: 3e4736a5eb2b51d28a5f34090e3299d7d426b73c [formerly 606264f0fbf8d213c53bd26a386c444e052c6849] [formerly 41bc1a583a3e701403ea922b0c120b1f2a6c4d58 [formerly 0a1fcd0ad2f86a2fe1de746e17b4234068560a95]]
Former-commit-id: f1bbb6828eac19488998e0192898aec38d050486 [formerly 9bc48cd3474042232c66825b187707fca662fbc3]
Former-commit-id: 7c913527413570129b91ab488fc41522f12d7b3f

--- a/locale/ar/LC_MESSAGES/messages.po
+++ b/locale/ar/LC_MESSAGES/messages.po
@@ -4116,3 +4116,15 @@ msgstr "اسم الخادم"
 
 msgid "Import from Highrise"
 msgstr "حمل المعلزمات من هايرايس"
+
+msgid "Add new user"
+msgstr "اضف مستخدم جديد"
+
+msgid "Filter by assignee"
+msgstr "نقح بواسطة قائمة التعيينات"
+
+msgid "Created date"
+msgstr "تاريخ الانشاء"
+
+msgid "My tasks"
+msgstr "مهامي"
