Fix the translation ,fix #1123
Former-commit-id: 248480aa4b8f0995a3716296147f1e869c7f9a2e [formerly dffd01ab54c70d8ae4471708ea07cc8eb4550f83] [formerly 8281095d6cfd1274196b15a87a4276b3fb6df746 [formerly e4e823a6426022a4f51501c6c119048e483b91e2]]
Former-commit-id: f1105e2a90f364f0f3b36ea2ae8ae74a3194860a [formerly eb2830b89e0fde9f83f14bcb2c2a616597e5e499]
Former-commit-id: 034176a12c4e7257f3455ea9127cb78715cc75fb

--- a/locale/ar/LC_MESSAGES/messages.po
+++ b/locale/ar/LC_MESSAGES/messages.po
@@ -2956,7 +2956,7 @@ msgstr "تحميلات"
 
 #: templates/admin/imports/import_list.html:84
 msgid "Import from Highrise"
-msgstr ""
+msgstr "حمل معلومات من هايرايس"
 
 #: templates/admin/imports/import_list.html:95
 msgid "Key"
@@ -4098,8 +4098,7 @@ msgstr "ارسل الدعوة"
 msgid "Imports"
 msgstr "تحميلات"
 
-msgid "Import from Highrise"
-msgstr "حمل من هايرايس"
+
 
 msgid "How to get a Key? : in highrise welcome page go to [ Account & Setting ]  and choose [ My info ] and click on [ API token ]"
 msgstr "كيف تحصل على مفتاحك في هايرايس ؟ : داخل الصفحة الرئيسية في هايرايس اختر [اعدادات الحساب] ثم اذهب الى [ معلوماتي ] انقر على [ابي توكن]"
@@ -4114,8 +4113,7 @@ msgid "Server Name"
 msgstr "اسم الخادم"
 
 
-msgid "Import from Highrise"
-msgstr "حمل المعلزمات من هايرايس"
+
 
 msgid "Add new user"
 msgstr "اضف مستخدم جديد"
