Fix the translation
Former-commit-id: 2f1457b6c429e74e679b812dbdf1f05ab104b6bf [formerly 4a807abf4d341c5837aa39e6d6bcb63d71125346] [formerly 0a466ae655a3d87baa292311766567bb45ac0338 [formerly c03c712d1c94a1e2b1d8dc9e81741d840ccb5e1f]]
Former-commit-id: 70ea109935b47279485d547bca7c9d65592d38ef [formerly cf55f595208ba959dd8af52389c5addb3b4598ad]
Former-commit-id: 4c6c13abdde2a83f737533e6931a6d073fa06d64

--- a/locale/ar/LC_MESSAGES/messages.po
+++ b/locale/ar/LC_MESSAGES/messages.po
@@ -1926,7 +1926,7 @@ msgstr "اضف موضوع جديد"
 #: templates/contacts/contact_show.html:307 templates/leads/lead_show.html:301
 #, fuzzy
 msgid "Enter an email"
-msgstr "ارسل بريد الكتروني "
+msgstr "ادخل بريد الكتروني "
 
 #: templates/accounts/account_show.html:440
 #: templates/contacts/contact_show.html:470 templates/leads/lead_show.html:459
@@ -4126,3 +4126,9 @@ msgstr "تاريخ الانشاء"
 
 msgid "My tasks"
 msgstr "مهامي"
+
+msgid "Enter a email"
+msgstr "ادخل بريد الكتروني"
+
+msgid "No results found, try with another filter, Add topics to retrieve news from twitter"
+msgstr "ﻻ توجد نتائج رجاءا حاول مع موضوع اخر اضف عدة مواضيع للحصول على اخر الاخبار من التويتر"
