Fix the translation
Former-commit-id: 02778e7eb5b9b63c98cdf27e2f09f6e16b56cea5 [formerly 0a5220a4b2472f8734b06f9920a7d96223aadca3] [formerly 38730da8eb3687c43a1048c3c6bfdfed9da32b18 [formerly 1cedf0a7e4ca57b281b7551cf39b622753b4b0cc]]
Former-commit-id: d561f0de46807c66b333bd5a8cbd5f4d14316d79 [formerly 51f765227616126c47be9da434cc932a93074c96]
Former-commit-id: f8e54c614518d9218de45033427bdeb088379d91

--- a/locale/ar/LC_MESSAGES/messages.po
+++ b/locale/ar/LC_MESSAGES/messages.po
@@ -2865,7 +2865,7 @@ msgstr "المراحل"
 #: templates/activities/task_show.html:212 templates/documents/show.html:92
 #, fuzzy
 msgid "Comments"
-msgstr "حسابات"
+msgstr "تعليقات"
 
 #: templates/activities/task_show.html:241 templates/documents/show.html:121
 #, fuzzy
