Working on translate, change the price to 30 $
Former-commit-id: 48d97239292d23e6c875617b13b3ca42f1e4e8e6 [formerly 8bd4f79185187756118529e07e9d69ed868e313f] [formerly 0898be923adc42bee64716cf8ba92aa3d1b3fc75 [formerly 703c99b37d3ad8310689cd8f85eaa0bbd319ca03]]
Former-commit-id: 60adf814b105528957db29bb7da514b0e4b1a76c [formerly fbda7dc27e9a20211d457eb924cf270f7dbb3124]
Former-commit-id: b3f730d4c3d48b70f22c4dbcf5a5f696631fe179

--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -2735,8 +2735,10 @@ msgstr "Rouvrir"
 #: templates/activities/all_tasks.html:356
 #: templates/activities/all_tasks.html:441
 #: templates/activities/all_tasks.html:526
-msgid "Assignee"
-msgstr "Assignee"
+msgid "Assignees"
+msgstr "Attribuer à"
+msgid "Assignees :"
+msgstr "Attribuer à :"
 
 #: templates/activities/all_tasks.html:214
 #: templates/activities/all_tasks.html:306
@@ -4164,7 +4166,7 @@ msgid "Details of Contact"
 msgstr "Détails de contact"
 
 msgid "Filter by assignee"
-msgstr "Filtrer par assignee"
+msgstr "Filtrer par Atribué"
 
 msgid "Add a comment"
 msgstr "Ajouter un commentaire"
@@ -4172,8 +4174,8 @@ msgstr "Ajouter un commentaire"
 msgid "Add comment"
 msgstr "Ajouter commentaire"
 
-msgid "+ Add new"
-msgstr "+ Ajouter un nouveau"
+msgid "+ Add new colaborator"
+msgstr "+ Ajouter un nouveau collaborateur"
 
 msgid "Attach files"
 msgstr "Joindre des fichiers"
