Missed translate in note show page,Fix #1227
Former-commit-id: 952254bd92705122d9d15eb559656f0e6ca2aa18 [formerly eb38c30e71fe47ab62e622925b6112a3d0958634] [formerly 614615a5239798c10f792e072f32ccfb4d78b479 [formerly 1f5c76b58619f18ee1f5f0754a8e0636d5091189]]
Former-commit-id: f608fb8a26d3e0adb79cc2dab47c8585172e3017 [formerly f50520ebbfd0642707cbd5cb0fe765df28d13df3]
Former-commit-id: 5458402d2b88f06254e6bc1d673bafef34469c9f

--- a/locale/ar/LC_MESSAGES/messages.po
+++ b/locale/ar/LC_MESSAGES/messages.po
@@ -2609,16 +2609,19 @@ msgstr "نشرت من طرف"
 
 #: templates/accounts/note_show.html:96
 msgid "Discuss this message"
-msgstr ""
+msgstr "اضف تعليقاتك حول هاته الملاحظة"
 
 #: templates/accounts/note_show.html:131
 #: templates/activities/task_show.html:324 templates/documents/show.html:153
 msgid "Who's involved"
-msgstr ""
+msgstr "هل تود المشاركة"
+
+msgid "Who's involved ?"
+msgstr "هل تود المشاركة ?"
 
 #: templates/accounts/note_show.html:141
 msgid "Invite people to participate in this discussion"
-msgstr ""
+msgstr "ادعوا افراد فريقك للمشاركة في التعليقات"
 
 #: templates/accounts/note_show.html:150 templates/accounts/note_show.html:189
 #: templates/activities/task_show.html:284
@@ -4132,3 +4135,6 @@ msgstr "ادخل بريد الكتروني"
 
 msgid "No results found, try with another filter, Add topics to retrieve news from twitter"
 msgstr "ﻻ توجد نتائج رجاءا حاول مع موضوع اخر اضف عدة مواضيع للحصول على اخر الاخبار من التويتر"
+
+msgid "Add comment"
+msgstr "اضف هذا التعليق"
