--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -2588,16 +2588,19 @@ msgstr "Posté par"
 
 #: templates/accounts/note_show.html:96
 msgid "Discuss this message"
-msgstr ""
+msgstr "Discutez ce message"
 
 #: templates/accounts/note_show.html:131
 #: templates/activities/task_show.html:324 templates/documents/show.html:153
 msgid "Who's involved"
-msgstr ""
+msgstr "Qui est impliqué"
+
+msgid "Who's involved ?"
+msgstr "Qui est impliqué ?"
 
 #: templates/accounts/note_show.html:141
 msgid "Invite people to participate in this discussion"
-msgstr ""
+msgstr "Invitez des gens à participer à cette discussion"
 
 #: templates/accounts/note_show.html:150 templates/accounts/note_show.html:189
 #: templates/activities/task_show.html:284
