Missed translate in event show page , Fix #1226
Former-commit-id: fd39c6a8654aaf8ba28e8d7680080a2c47bc5081 [formerly 2aa6462e004041c48ad29fe0ff96fb590854517d] [formerly d32515f2840878df2c18417d8255d833813610e6 [formerly ed6376a52e25447d37f44c857b735a1167897748]]
Former-commit-id: 41dc2da183bd34a910406a6674a41d29e8a6e16c [formerly 769aee429e9ab26f958f7fe67ef7ccd98483a0e8]
Former-commit-id: f538df6342de5d61faadba6b906638aa8f39b7cc

--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -2854,7 +2854,7 @@ msgstr "Commentaires"
 #: templates/activities/task_show.html:241 templates/documents/show.html:121
 #, fuzzy
 msgid "Add New Comment :"
-msgstr "Ajouter un nouveau événement"
+msgstr "Ajouter un commentaire :"
 
 #: templates/activities/task_show.html:331
 #, fuzzy
@@ -2869,7 +2869,7 @@ msgstr "Assignee"
 #: templates/activities/task_show.html:344 templates/documents/show.html:166
 #, fuzzy
 msgid "Add a new assignee"
-msgstr "Ajouter une nouvelle étape"
+msgstr "Ajouter un nouveau assignée"
 
 #: templates/activities/task_show.html:368
 #, fuzzy
@@ -3231,7 +3231,7 @@ msgstr "Choisir la priorité"
 #: templates/opportunities/opportunity_show.html:394
 #: templates/opportunities/opportunity_show.html:1102
 msgid "Description"
-msgstr "description"
+msgstr "Description"
 
 #: templates/cases/case_new.html:182 templates/contacts/contact_new.html:356
 #: templates/leads/lead_new.html:363
@@ -4185,3 +4185,12 @@ msgstr "Joindre des fichiers"
 
 msgid "Enter a email"
 msgstr "Entrer un email"
+
+msgid "Who is involved"
+msgstr "Qui est impliqué"
+
+msgid "Event Informations"
+msgstr "Informations de l'événement"
+
+msgid "Schedule"
+msgstr "Calendrier"
